Добавлены экраны. about и мои работы

--- a/index.html
+++ b/index.html
@@ -39,5 +39,61 @@
 			</a>             
 		</div>
 	</div>
+
+
+	<div class="container wrapper-content">
+		<div class="about-photo">
+			<img class="about-photo-img" src="img/image.webp">
+		</div>
+		<div class="about-content">
+			<h3 class="about-title">Кто я</h3>
+			<p>Занимаюсь версткой и созданием сайтов, живу в Москве. Опыт в веб-разработке 10 лет. За это время создал десятки проектов. Мое портфолио можно посомтреть ниже на этой страице.</p>
+			<h3 class="about-title">Чем могу помочь</h3>
+			<p>Если вам необходимо сверстаь макет, сделать лендинг или сайт-визитку - то вы обратились по адресу.</p>
+			<p><strong>Я умею:</strong></p>
+			<ul class="about-list">
+				<li>Верстать сайты,</li>
+				<li>делат адаптивную верстку для мобильных устройств,</li>
+				<li>оптимизирую графику и код сайта так чтобы он загружался быстрее,</li>
+				<li>могу сделать формы обратной связи,</li>
+				<li>добавить панель управления на ваш сайт,</li>
+			</ul>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="container">
+			<div class="title">Мои работы</div>
+			<div class="slogan">Верстка и создание сайтов</div>
+			<div class="site">
+				<div class="site-wrap">
+					<div class="site-wrap-img">
+						<img src="img/project-1.jpg">
+					</div>
+					<div class="site-wrap__desc">
+						<h3>Туристический сайт</h3>
+						<a href="#">Смотреть онлайн</a>
+					</div>
+				</div>
+				<div class="site-wrap">
+					<div class="site-wrap-img">
+						<img src="img/project-2.jpg">
+					</div>
+					<div class="site-wrap__desc">
+						<h3>Интернет-магазин одежды</h3>
+						<a href="#">Смотреть онлайн</a>
+					</div>
+				</div>
+				<div class="site-wrap">
+					<div class="site-wrap-img">
+						<img src="img/project-3.jpg">
+					</div>
+					<div class="site-wrap__desc">
+						<h3>Туристический сайт</h3>
+						<a href="#">Смотреть онлайн</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
