contacts и небольшая перереализация блоков

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>
 
 		<div class="photo-wrapper">
-			<img class="photo-img" src="img/photo-big.jpg" alt="">
+			<img class="photo-img" src="img/html_photo.jpg">
 		</div>
 
 
@@ -40,30 +40,35 @@
 		</div>
 	</div>
 
-
-	<div class="container wrapper-content">
-		<div class="about-photo">
-			<img class="about-photo-img" src="img/image.webp">
-		</div>
-		<div class="about-content">
-			<h3 class="about-title">Кто я</h3>
-			<p>Занимаюсь версткой и созданием сайтов, живу в Москве. Опыт в веб-разработке 10 лет. За это время создал десятки проектов. Мое портфолио можно посомтреть ниже на этой страице.</p>
-			<h3 class="about-title">Чем могу помочь</h3>
-			<p>Если вам необходимо сверстаь макет, сделать лендинг или сайт-визитку - то вы обратились по адресу.</p>
-			<p><strong>Я умею:</strong></p>
-			<ul class="about-list">
-				<li>Верстать сайты,</li>
-				<li>делат адаптивную верстку для мобильных устройств,</li>
-				<li>оптимизирую графику и код сайта так чтобы он загружался быстрее,</li>
-				<li>могу сделать формы обратной связи,</li>
-				<li>добавить панель управления на ваш сайт,</li>
-			</ul>
+	<div class="section-about-me">
+		<div class="container">
+			<div class="row space-between">
+				<div class="about-photo">
+					<img class="about-photo-img" src="img/image.webp">
+				</div>
+				<div class="about-content">
+					<h3 class="about-title">Кто я</h3>
+					<p>Занимаюсь версткой и созданием сайтов, живу в Москве. Опыт в веб-разработке 10 лет. За это время создал десятки проектов. Мое портфолио можно посомтреть ниже на этой страице.</p>
+					<h3 class="about-title">Чем могу помочь</h3>
+					<p>Если вам необходимо сверстаь макет, сделать лендинг или сайт-визитку - то вы обратились по адресу.</p>
+					<p><strong>Я умею:</strong></p>
+					<ul class="about-list">
+						<li>Верстать сайты,</li>
+						<li>делат адаптивную верстку для мобильных устройств,</li>
+						<li>оптимизирую графику и код сайта так чтобы он загружался быстрее,</li>
+						<li>могу сделать формы обратной связи,</li>
+						<li>добавить панель управления на ваш сайт,</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="container-fluid">
+	<div class="section-portfolio">
 		<div class="container">
-			<div class="title">Мои работы</div>
-			<div class="slogan">Верстка и создание сайтов</div>
+			<div class="section-title-wrapper">
+				<div class="title">Мои работы</div>
+				<div class="slogan">Верстка и создание сайтов</div>
+			</div>
 			<div class="site">
 				<div class="site-wrap">
 					<div class="site-wrap-img">
@@ -92,6 +97,35 @@
 						<a href="#">Смотреть онлайн</a>
 					</div>
 				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="section-contact">
+		<div class="container">
+			<div class="section-title-wrapper">
+				<div class="section-title">Контакты</div>
+				<div class="section-subtitle">Всегда на связи, отвечаю оперативно</div>		
+			</div>
+			<div class="row">
+				<a href="#" class="contact-item contact-item--vk"">
+					<div class="contact-item-icon">
+						<i class="fab fa-vk"></i>
+					</div>
+					<div class="contact-item-text">Написать Вконтакте</div>
+				</a>				
+				<a href="#" class="contact-item contact-item--email">
+					<div class="contact-item-icon">
+						<i class="far fa-envelope"></i>
+					</div>
+					<div class="contact-item-text">info@testtest.ru</div>
+				</a>				
+				<a href="#" class="contact-item contact-item--tg">
+					<div class="contact-item-icon">
+						<i class="fab fa-telegram-plane"></i>
+					</div>
+					<div class="contact-item-text">Связаться в Telegram</div>
+				</a>
 			</div>
 		</div>
 	</div>
